# WA-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  commands.py  config.py  db.py  logic.py  main.py  models.py  scheduler.py  schemas.py  workers.py
app/wa/: __init__.py  client.py  payloads.py  templates.py
tests/: conftest.py  test_commands.py  test_scheduler.py  test_time.py  test_webhook_group_reply.py  test_webhook_owner.py
utils/: logging.py  time.py
