[tool.poetry]
name = "wa-bot"
version = "0.1.0"
description = "WhatsApp Cloud API scheduler bot with FastAPI and Celery."
authors = ["Owner <owner@example.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "utils" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
celery = "^5.3.6"
redis = "^5.0.3"
dateparser = "^1.2.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
freezegun = "^1.5.1"
black = "^24.4.0"
ruff = "^0.4.2"
isort = "^5.13.2"
mypy = "^1.9.0"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app", "utils"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C4", "TID", "ARG", "DTZ"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
